init chrome extension

--- a/my-chrome-extension/src/popup/popup.html
+++ b/my-chrome-extension/src/popup/popup.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebLLM Static Chat</title>
-    
+
     <!-- Required headers for WebLLM -->
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
 
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
-    <div class="container">
+    <div class="container" style="min-width: 600px; min-height: 800px;">
         <div class="header">
             <h1>🤖 WebLLM Chat</h1>
             <p>Local AI Chat - Runs entirely in your browser</p>
@@ -238,4 +239,5 @@
         }
     </script>
 </body>
+
 </html>
